--- a/index.html
+++ b/index.html
@@ -702,6 +702,17 @@
         min-height: 350px;
       }
 
+      .globe-card {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        height: auto;
+      }
+      .globe-wrap {
+        order: 1;
+        position: relative;
+        height: 350px;
+      }
       .globe-card,
       .globe-wrap,
       .globe-viewport {
@@ -734,8 +745,9 @@
       }
 
       .ticker-overlay {
-        display: block !important;
         position: relative !important;
+        display: block !important;
+        visibility: visible !important;
         order: 2;
         top: auto !important;
         left: auto !important;
@@ -770,11 +782,13 @@
         flex-direction: column;
         gap: 1rem;
         width: 100%;
+        align-items: center;
       }
 
       .cta-buttons .btn {
         width: 100%;
         max-width: 300px;
+        text-align: center;
       }
 
       .hero-turnstile {
@@ -831,6 +845,23 @@
 
     /* Very small screens */
     @media (max-width: 480px) {
+      /* Force ticker to show */
+      .ticker-overlay {
+        display: block !important;
+        visibility: visible !important;
+        position: relative !important;
+        order: 2;
+        top: auto !important;
+        left: auto !important;
+        right: auto !important;
+        transform: none !important;
+        width: 100% !important;
+        max-width: 100% !important;
+        max-height: 180px;
+        margin: 1rem 0 0 0 !important;
+        padding: 0 0.5rem !important;
+      }
+
       .ticker-head {
         flex-direction: column;
         align-items: flex-start;
@@ -842,12 +873,22 @@
         justify-content: flex-start;
       }
 
-      .ticker-overlay {
-        max-height: 180px;
-      }
-
       .ticker-body {
         max-height: 100px;
+      }
+
+      /* Center CTA buttons */
+      .hero__left {
+        align-items: center;
+      }
+
+      .cta-buttons {
+        align-items: center;
+        justify-content: center;
+      }
+
+      .cta-buttons .btn {
+        text-align: center;
       }
     }
   </style>
