Update Emma bio

--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -481,8 +481,10 @@
           <h4 class="team-role">Lead Developer</h3>
           <p class="team-title">Engineering</p>
           <p class="team-bio">
-            Leading our managed security service offerings for nonprofits and small businesses,
-            bringing enterprise-grade protection to underserved organizations.
+            Emma Pennington is a software developer with a B.S. in Computer Science and Software Engineering,
+            specializing in front-end development and user-centered design. She is dedicated to building intuitive,
+            accessible, and reliable digital experiences that prioritize usability and inclusivity.
+            <br><br>
           </p>
           <div class="team-badges">
             <span class="badge">B.S.</span>
