--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -481,7 +481,7 @@
           <h4 class="team-role">Lead Developer</h3>
           <p class="team-title">Engineering</p>
           <p class="team-bio">
-            Emma Pennington is a software developer with a B.S. in Computer Science and Software Engineering,
+            Emma is a software developer with a B.S. in Computer Science and Software Engineering,
             specializing in front-end development and user-centered design. She is dedicated to building intuitive,
             accessible, and reliable digital experiences that prioritize usability and inclusivity.
             <br><br>
