--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -485,6 +485,11 @@
             specializing in front-end development and user-centered design. She is dedicated to building intuitive,
             accessible, and reliable digital experiences that prioritize usability and inclusivity.
             <br><br>
+            Emma is passionate about leveraging technology to serve underserved communities and believes that quality
+            cybersecurity education and protection should be accessible to everyone, regardless of resources.
+            Through her work with CyberSmrt, she's committed to closing the digital equity gap by creating tools and
+            platforms that empower nonprofits, schools, and small businesses to protect themselves in an increasingly
+            connected world.
           </p>
           <div class="team-badges">
             <span class="badge">B.S.</span>
