Add Ben Kern to leadership page

--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -434,6 +434,45 @@
       </div>
       <div class="leadership-card">
         <div class="leadership-content">
+          <img src="/assets/team/ben-kern.png" alt="Ben Kern" class="leader-headshot">
+
+          <div class="leader-info">
+            <h3>Ben Kern</h3>
+            <h4>Chief Technology Officer</h4>
+            <p>
+              Benjamin Kern is an accomplished technology and cybersecurity leader with over two decades of experience
+              driving digital transformation, operational excellence, and organizational resilience. With a background
+              spanning cybersecurity, cloud engineering, and information assurance, he has built a career aligning
+              technology strategy with mission objectives, fostering innovation, and developing high-performing teams
+              that deliver secure and scalable solutions.
+              <br><br>
+              Throughout his career, Benjamin has led enterprise-level technology initiatives that modernized
+              infrastructure, strengthened cybersecurity frameworks, and improved system performance across
+              complex organizations. He brings deep expertise in risk management, systems integration, and cloud a
+              rchitecture—balancing strategic vision with hands-on technical leadership. Known for building collaborative
+              partnerships, Benjamin excels at translating technical complexity into actionable strategy for stakeholders
+              at all levels.
+              <br><br>
+              A veteran of the United States Navy, Benjamin served in progressive leadership roles overseeing cybersecurity
+              operations, network administration, and workforce development. He holds a Masters in Cybersecurity and Information
+              Assurance and multiple professional certifications in security, agile leadership, and DevSecOps. Passionate about
+              leveraging technology for social good, Benjamin is committed to helping mission-driven organizations harness secure,
+              innovative solutions that amplify impact and sustain long-term growth.
+            </p><br>
+            <div class="team-badges">
+              <span class="badge">Father</span>
+              <span class="badge">CTO</span>
+              <span class="badge">M.S. CSIA</span>
+              <span class="badge">BSCS</span>
+              <span class="badge">Navy Veteran</span>
+              <span class="badge">CISSP</span>
+              <span class="badge">CEH</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="leadership-card">
+        <div class="leadership-content">
           <img src="/assets/team/melissa-hall.png" alt="Melissa Hall" class="leader-headshot">
 
           <div class="leader-info">
