--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -359,7 +359,7 @@
 
           <div class="leader-info">
             <h3>Tony Rossi</h3>
-            <h4>Founder & Executive Director</h4>
+            <h4>Founder | Chief Executive Officer</h4>
             <p>
               Tony Rossi is a Service-Disabled Veteran with 15+ years of distinguished Navy cybersecurity experience,
               specializing in critical infrastructure protection, threat analysis, and security operations. Throughout
